--- a/index.html
+++ b/index.html
@@ -17,25 +17,41 @@
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
     <meta property="og:image" content="">
     <!-- CSS -->
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- JS -->
-    <style src="./js/script.js"></style>
     <!-- ファビコン -->
     <link rel="icon" href="">
     <link rel="apple-touch-icon" sizes="180x180" href="">
 </head>
-<body>
+<body class="home">
     <header>
-        <h1></h1>
+        <h1><a href="./index.html">JUNO's Study</a></h1>
         <nav>
-
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="">About me</a></li>
+                <li><a href="https://twitter.com/Juno1140" target="_blank">Twitter</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-
+        <div>
+            <h1>参考書一覧</h1>
+            <p>JUNOが読んだ技術書を紹介しています。</p>
+        </div>
+        <div>
+            <ul>
+                <li><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></li>
+                <li><img src="./images/book_img/Python.jpg" alt="no"></li>
+                <li><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></li>
+                <li><img src="./images/book_img/Python.jpg" alt="no"></li>
+            </ul>
+        </div>
     </main>
     <footer>
-
+        <small>&copy; juno. All rights reserved.</small>
     </footer>
+    <!-- JS -->
+    <style src="./js/script.js"></style>
 </body>
 </html>
