--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta property="og:image" content="">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./lib/slick/slick.css">
+    <link rel="stylesheet" href="./lib/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- ファビコン -->
     <link rel="icon" href="">
@@ -25,7 +27,14 @@
 </head>
 <body class="home">
     <header>
-        <h1><a href="./index.html">JUNO's Study</a></h1>
+        <h1><a href="./index.html">JUNO's Books</a></h1>
+        <div id="nav_toggle">
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -35,23 +44,26 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>参考書一覧</h1>
-            <p>JUNOが読んだ技術書を紹介しています。</p>
-        </div>
-        <div>
-            <ul>
-                <li><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></li>
-                <li><img src="./images/book_img/Python.jpg" alt="no"></li>
-                <li><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></li>
-                <li><img src="./images/book_img/Python.jpg" alt="no"></li>
+        <div class="opacity">
+            <div>
+                <h1>書籍一覧</h1>
+                <p>JUNOが読んだ書籍を紹介しています。</p>
+            </div>
+            <ul class="slider">
+                <li><a href="./bookinfo/"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
+                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
+                <li><a href="./bookinfo/"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
+                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
             </ul>
+            <footer>
+                <small>&copy; JUNO. All rights reserved.</small>
+            </footer>
         </div>
     </main>
-    <footer>
-        <small>&copy; juno. All rights reserved.</small>
-    </footer>
     <!-- JS -->
-    <style src="./js/script.js"></style>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="./lib/slick/slick.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
