--- a/bookinfo/book1.html
+++ b/bookinfo/book1.html
@@ -4,7 +4,7 @@
     <!-- 文字コード指定 -->
     <meta charset="UTF-8">
     <!-- タイトル -->
-    <title>JUNO's Books | Home</title>
+    <title>JUNO's Books | コーディングとサイト制作の教科書</title>
     <!-- ページ概要 -->
     <meta name="description" content="当サイトではJUNOが読んだ本を紹介しています。">
     <!-- スマートフォン対応 -->
@@ -13,21 +13,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- OGP(SNS連携) -->
     <meta property="og:url" content="">
-    <meta property="og:title" content="JUNO's Books | Home">
+    <meta property="og:title" content="JUNO's Books | コーディングとサイト制作の教科書">
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
     <meta property="og:image" content="">
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./lib/slick/slick.css">
-    <link rel="stylesheet" href="./lib/slick/slick-theme.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../lib/slick/slick.css">
+    <link rel="stylesheet" href="../lib/slick/slick-theme.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- ファビコン -->
     <link rel="icon" href="">
     <link rel="apple-touch-icon" sizes="180x180" href="">
 </head>
 <body class="home">
     <header>
-        <h1><a href="./index.html">JUNO's Books</a></h1>
+        <h1><a href="../index.html">JUNO's Books</a></h1>
         <div id="nav_toggle">
             <div>
                 <span></span>
@@ -37,24 +37,17 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./introduction.html">About me</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../introduction.html">About me</a></li>
                 <li><a href="https://twitter.com/Juno1140" target="_blank">Twitter</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="opacity">
-            <div>
-                <h1>書籍一覧</h1>
-                <p>JUNOが読んだ書籍を紹介しています。</p>
+            <div class="bookinfo">
+
             </div>
-            <ul class="slider">
-                <li><a href="./bookinfo/book1.html"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
-            </ul>
             <footer>
                 <small>&copy; JUNO. All rights reserved.</small>
             </footer>
