--- a/bookinfo/book1.html
+++ b/bookinfo/book1.html
@@ -4,7 +4,7 @@
     <!-- 文字コード指定 -->
     <meta charset="UTF-8">
     <!-- タイトル -->
-    <title>JUNO's Books | コーディングとサイト制作の教科書</title>
+    <title>JUNO's Books | HTML5&CSS3 コーディングとサイト制作の教科書</title>
     <!-- ページ概要 -->
     <meta name="description" content="当サイトではJUNOが読んだ本を紹介しています。">
     <!-- スマートフォン対応 -->
@@ -12,20 +12,20 @@
     <!-- IE最適化 -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- OGP(SNS連携) -->
-    <meta property="og:url" content="">
-    <meta property="og:title" content="JUNO's Books | コーディングとサイト制作の教科書">
+    <meta property="og:url" content="https://www.junosbooks.xyz/bookinfo/book1.html">
+    <meta property="og:title" content="JUNO's Books | HTML5&CSS3 コーディングとサイト制作の教科書">
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="../images/book_img/html.jpg">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../lib/slick/slick.css">
     <link rel="stylesheet" href="../lib/slick/slick-theme.css">
     <link rel="stylesheet" href="../css/style.css">
     <!-- ファビコン -->
-    <link rel="icon" href="">
-    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" href="../images/my_phote.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/my_phote180.jpg">
 </head>
-<body class="home">
+<body class="book">
     <header>
         <h1><a href="../index.html">JUNO's Books</a></h1>
         <div id="nav_toggle">
@@ -46,7 +46,36 @@
     <main>
         <div class="opacity">
             <div class="bookinfo">
-
+                <div class="info-top">
+                    <div class="book_image">
+                        <img src="../images/book_img/html.jpg" alt="bookimage">
+                    </div>
+                    <div class="book_baseinfo">
+                        <h2>世界一わかりやすいHTML5&CSS3 コーディングとサイト制作の教科書</h2>
+                        <dl>
+                            <dt>著者</dt>
+                            <dd>赤間公太郎、狩野咲、鈴木清敬</dd>
+                            <dt>発行年月日</dt>
+                            <dd>2019/3/16</dd>
+                            <dt>価格</dt>
+                            <dd>本体2,680円＋税</dd>
+                            <dt><a href="https://gihyo.jp/book/2019/978-4-297-10302-6" target="_blank">公式サイト</a></dt>
+                        </dl>
+                    </div>
+                </div>
+                <div class="book_description">
+                    <h2>読んだ感想</h2>
+                    <p>
+                        本書はHTML5とCSS3を用いた初心者向けのWebサイト制作の教材です。<br><br>
+                        私自身はHTMLとCSSの基礎的な文法は過去に学んだことがありましたが、<br>実際にWebサイトを一から作る経験がなかったため今回購入してみました。<br><br>
+                        HTML5とCSS3の書き方から始まり、実際にサンプルのWebサイトの制作も体験できます。<br><br>
+                        制作したサイトはサーバーに上げて、インターネットから見れるようになりました。<br><br>
+                        この本を読む前まではどういう流れでWebサイトがインターネット上で見れるようになるのかなんとなくしかイメージできませんでした(特にサーバーの契約など)。<br><br>
+                        サンプルサイトの制作、サーバーの契約、ドメインの設定、FTPでファイルをあげる方法など、丁寧に解説されているため初めての私でもできました。<br><br>
+                        また、最後にGoogle Analyticsを用いてアクセス解析をできるようにするところまで載っているのもありがたいです。<br><br>
+                        Webサイト制作の流れを実際に作りながら学びたい方にはオススメです。
+                    </p>
+                </div>
             </div>
             <footer>
                 <small>&copy; JUNO. All rights reserved.</small>
@@ -55,7 +84,7 @@
     </main>
     <!-- JS -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="./lib/slick/slick.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="../lib/slick/slick.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
