--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <!-- IE最適化 -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- OGP(SNS連携) -->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://www.junosbooks.xyz">
     <meta property="og:title" content="JUNO's Books | Home">
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="./images/my_phote180.jpg">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./lib/slick/slick.css">
     <link rel="stylesheet" href="./lib/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- ファビコン -->
-    <link rel="icon" href="">
-    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" href="./images/my_phote.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/my_phote180.jpg">
 </head>
 <body class="home">
     <header>
@@ -50,10 +50,10 @@
                 <p>JUNOが読んだ書籍を紹介しています。</p>
             </div>
             <ul class="slider">
-                <li><a href="./bookinfo/book1.html"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/HTML5CSS3.jpg" alt="no"></a></li>
-                <li><a href="./bookinfo/"><img src="./images/book_img/Python.jpg" alt="no"></a></li>
+                <li><a href="./bookinfo/book1.html"><img src="./images/book_img/html.jpg" alt="html5css3"></a></li>
+                <li><a href="./bookinfo/book2.html"><img src="./images/book_img/ai.jpg" alt="ai"></a></li>
+                <li><a href="./bookinfo/book3.html"><img src="./images/book_img/git.jpg" alt="git"></a></li>
+                <li><a href="./bookinfo/book4.html"><img src="./images/book_img/webpro.jpg" alt="webpro"></a></li>
             </ul>
             <footer>
                 <small>&copy; JUNO. All rights reserved.</small>
