--- a/introduction.html
+++ b/introduction.html
@@ -12,18 +12,18 @@
     <!-- IE最適化 -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- OGP(SNS連携) -->
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://www.junosbooks.xyz/introduction.html">
     <meta property="og:title" content="JUNO's Books | About me">
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="./images/my_phote180.jpg">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./lib/slick/slick.css">
     <link rel="stylesheet" href="./lib/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- ファビコン -->
-    <link rel="icon" href="">
-    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" href="./images/my_phote.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/my_phote180.jpg">
 </head>
 <body class="introduction">
     <header>
