--- a/bookinfo/book4.html
+++ b/bookinfo/book4.html
@@ -4,7 +4,7 @@
     <!-- 文字コード指定 -->
     <meta charset="UTF-8">
     <!-- タイトル -->
-    <title>JUNO's Books | HTML5&CSS3 コーディングとサイト制作の教科書</title>
+    <title>JUNO's Books | これ1冊でゼロから学べる Webプログラミング超入門</title>
     <!-- ページ概要 -->
     <meta name="description" content="当サイトではJUNOが読んだ本を紹介しています。">
     <!-- スマートフォン対応 -->
@@ -12,10 +12,10 @@
     <!-- IE最適化 -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- OGP(SNS連携) -->
-    <meta property="og:url" content="https://www.junosbooks.xyz/bookinfo/book1.html">
-    <meta property="og:title" content="JUNO's Books | HTML5&CSS3 コーディングとサイト制作の教科書">
+    <meta property="og:url" content="https://www.junosbooks.xyz/bookinfo/book4.html">
+    <meta property="og:title" content="JUNO's Books | これ1冊でゼロから学べる Webプログラミング超入門">
     <meta property="og:description" content="当サイトではJUNOが読んだ本を紹介しています。">
-    <meta property="og:image" content="../images/book_img/html.jpg">
+    <meta property="og:image" content="../images/book_img/webpro.jpg">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../lib/slick/slick.css">
@@ -48,32 +48,35 @@
             <div class="bookinfo">
                 <div class="info-top">
                     <div class="book_image">
-                        <img src="../images/book_img/html.jpg" alt="bookimage">
+                        <img src="../images/book_img/webpro.jpg" alt="bookimage">
                     </div>
                     <div class="book_baseinfo">
-                        <h2>世界一わかりやすいHTML5&CSS3 コーディングとサイト制作の教科書</h2>
+                        <h2>これ1冊でゼロから学べる Webプログラミング超入門<br>
+                             − HTML,CSS,JavaScript,PHPをまるごとマスタ −
+                        </h2>
                         <dl>
                             <dt>著者</dt>
-                            <dd>赤間公太郎、狩野咲、鈴木清敬</dd>
+                            <dd>掌田 津耶乃</dd>
                             <dt>発行年月日</dt>
-                            <dd>2019/3/16</dd>
+                            <dd>2016/7/29</dd>
                             <dt>価格</dt>
-                            <dd>本体2,680円＋税</dd>
-                            <dt><a href="https://gihyo.jp/book/2019/978-4-297-10302-6" target="_blank">公式サイト</a></dt>
+                            <dd>2,894円</dd>
+                            <dt><a href="https://book.mynavi.jp/ec/products/detail/id=55848" target="_blank">公式サイト</a></dt>
                         </dl>
                     </div>
                 </div>
                 <div class="book_description">
                     <h2>読んだ感想</h2>
                     <p>
-                        本書はHTML5とCSS3を用いた初心者向けのWebサイト制作の教材です。<br><br>
-                        私自身はHTMLとCSSの基礎的な文法は過去に学んだことがありましたが、<br>実際にWebサイトを一から作る経験がなかったため今回購入してみました。<br><br>
-                        HTML5とCSS3の書き方から始まり、実際にサンプルのWebサイトの制作も体験できます。<br><br>
-                        制作したサイトはサーバーに上げて、インターネットから見れるようになりました。<br><br>
-                        この本を読む前まではどういう流れでWebサイトがインターネット上で見れるようになるのかなんとなくしかイメージできませんでした(特にサーバーの契約など)。<br><br>
-                        サンプルサイトの制作、サーバーの契約、ドメインの設定、FTPでファイルをあげる方法など、丁寧に解説されているため初めての私でもできました。<br><br>
-                        また、最後にGoogle Analyticsを用いてアクセス解析をできるようにするところまで載っているのもありがたいです。<br><br>
-                        Webサイト制作の流れを実際に作りながら学びたい方にはオススメです。
+                        本書はHTML・CSS・JavaScript・PHPを用いたWebプログラミング入門書です。<br><br>
+                        それぞれのマークアップ言語やプログラミング言語をサンプルをもとに学べます。<br><br>
+                        著者はこれまでに多くの本を出されている掌田津耶乃さんです。<br><br>
+                        重点はJavaScriptに置いていて、図形を描写するCanvasや非同期通信でAjaxも学ぶことができました。<br><br>
+                        最後に２つゲーム制作を体験できます。<br>
+                        一つはアイテム収集ゲーム、もう一つは簡単なRPGです。<br><br>
+                        一通り模写して、動いた時は感動でしたね(記述ミスを見つけるデバッグはが大変でしたが)。10回くらい自分で作ったゲームで遊びました。<br><br>
+                        ゲームのコードに関しては初心者は１回では完全に理解はできない気がします(少なくとも私は理解できませんでした。)が、作った経験は大きな自信になると思います。<br><br>
+                        HTML・CSS・JavaScript・PHPの基礎はこの１冊で一通り学べるのでWebの初学者にはオススメです。<br><br>
                     </p>
                 </div>
             </div>
