--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./lib/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- ファビコン -->
-    <link rel="icon" href="./images/my_phote.ico">
+    <link rel="shortcut icon" href="./my_phote.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="./images/my_phote180.jpg">
 </head>
 <body class="home">
