自己紹介修正

--- a/introduction.html
+++ b/introduction.html
@@ -52,11 +52,11 @@
                     <p>JUNO</p>
                 </div>
                 <div class="right-side">
-                    <h2>エンジニア経歴</h2>
+                    <h2>業務経歴</h2>
                     <dl>
                         <dt>2017.7</dt><dd>新卒でエンジニアになる</dd>
                         <dt>2017.9</dt><dd>社内システムエンジニア(PHP/Laravel)</dd>
-                        <dt>2018.10</dt><dd>Excel入力作業・Excel-VBAエンジニア</dd>
+                        <dt>2018.10</dt><dd>データ入力作業<br>Excel-VBAを勉強し、業務の自動化に貢献</dd>
                         <dt>2019.4</dt><dd>再びPHPエンジニア<br>独学でWebサイト制作を始める。</dd>
                     </dl>
                     <div class="twitter">
